--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -335,6 +335,7 @@ h1 {
   white-space: pre-wrap;
   word-break: break-word;
 }
+
 .view-summary-container {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   max-width: 900px;
@@ -351,7 +352,7 @@ h1 {
   font-weight: bold;
   margin-right: 0.5rem;
   font-size: 1.2rem;
-  color: #264653;
+  color: white;
 }
 
 .month-picker input[type="month"] {
